# exif-sniffer

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  VERIFICATION_GUIDELINES.md  docker-compose.yml  docker-entrypoint.sh  portainer-stack.yml  pyproject.toml
.github/workflows/: ci.yml
src/exifsniffer/: __init__.py  __main__.py  exif_edit.py  extract.py  fetch.py  filesystem_access.py  local_media.py  paths.py  security.py  server.py  settings.py
tests/: test_exif_edit.py  test_extract.py  test_fetch_client.py  test_filesystem_access.py  test_local_media.py  test_security.py
